--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "email-validator": "^2.0.4",
     "express": "^4.16.3",
+    "google-map-react": "^1.0.6",
     "jquery": "^3.3.1",
     "path": "^0.12.7",
     "pg": "^7.4.3",
-    "react": "^16.4.2"
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
